# CTC-12

./: README.md
Lab 01/UlissesLopes/src/: hash.cpp  hash.h  hashfunctions.cpp
Lab 01/matlabhash220310/matlabhash/: H.m  analysehashcount.m  checkhashfunc.m  comparehashfuncs.m  defhashfuncs.m  hashtextfile.m  plothash.m  plothashcount.m  prodint.m  runcomparehashfunc.m
Lab 02/: busca.eps  insert.eps  ulisses.silva_relatorio_lab2.tex
Lab 02/labTree240321_1513/: CMakeLists.txt
Lab 02/labTree240321_1513/src/: IndexPointsAluno.cpp  IndexPointsAluno.h
Lab 02/labTree240321_1513/test/: testTree.cpp
Lab 02/src/: IndexPointsAluno.cpp  IndexPointsAluno.h  RBTree.cpp  RBTree.h
Lab 03/: gerarGraficos.m
Lab 03/fig/: fig01eps  fig02.eps  fig03.eps  fig04.eps  fig05.eps  fig06.eps  fig07.eps  fig08.eps  fig09.eps  fig10.eps  fig11.eps  fig12.eps
Lab 03/labsort240404_1950/: CMakeLists.txt  generateZipProf
Lab 03/labsort240404_1950/src/: mymergesort.cpp  myquicksort.cpp  myradixsort.cpp
Lab 03/src/: mymergesort.cpp  myquicksort.cpp  myradixsort.cpp  mysortfunctions.h
Lab 04/: gerarGraficos_lab4_parte1.m
Lab 04/labParadigm240514_1555/: CMakeLists.txt  generateZipProf
Lab 04/labParadigm240514_1555/src/: SSPSolverAluno2.cpp  SSPSolverPD.cpp  TrocoSolverDivConquer.cpp  TrocoSolverGreedy.cpp  TrocoSolverPD.cpp
Lab 04/parte 2/: gerarGraficos_lab4_parte2.m  gerarGraficos_lab4_parte2_alterado.m
Lab 04/parte 2/fig/: fig1.eps  fig2.eps  fig3.eps  fig4.eps  fig5.eps  fig6.eps
Lab 04/parte 2/src/: SSPSolverAluno2.cpp  SSPSolverPD.cpp  TrocoSolver.h  TrocoSolverDivConquer.cpp  TrocoSolverGreedy.cpp  TrocoSolverPD.cpp
Lab 05/: LabTSP_24.docx
Lab 05/src/: TspSolver.cpp  TspSolver.h
Lab Exame/: generateZipProf
Lab Exame/Arquivos/Arquivos_Lab_Bizarro/: CMakeLists.txt
Lab Exame/Arquivos/Arquivos_Lab_Bizarro/src/: TspSolver.cpp  TspSolver.h
Lab Exame/src/: TspSolver.cpp  TspSolver.h
Lab Exame/test/: testTsp.cpp
